kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-react-app-ingress
spec:
  rules:
    - host: sander9gag.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: react-app-loadbalancer
                port:
                  number: 3000
